--- a/src/assets/scss/components/navbar.scss
+++ b/src/assets/scss/components/navbar.scss
@@ -4,11 +4,11 @@
     gap: 50px;
     color: $secondary;
 
-    @media screen and (max-width: 850px) {
+    @media screen and (max-width: 900px) {
         gap: 35px;
     }
 
-    @media screen and (max-width: 550px) {
+    @media screen and (max-width: 650px) {
         gap: 20px;
     }
 
@@ -16,11 +16,12 @@
         font-size: 24px;
         font-weight: 500;
 
-        @media screen and (max-width: 850px) {
+        @media screen and (max-width: 900px) {
             font-size: 18px;
+            text-transform: uppercase;
         }
 
-        @media screen and (max-width: 550px) {
+        @media screen and (max-width: 650px) {
             font-size: 12px;
         }
     }
