--- a/src/assets/scss/pages/error.scss
+++ b/src/assets/scss/pages/error.scss
@@ -20,6 +20,7 @@
          @media screen and (max-width: 900px) {
             font-size: 150px;
          }
+
          @media screen and (max-width: 650px) {
             font-size: 96px;
          }
@@ -27,28 +28,34 @@
 
       &_message {
          text-align: center;
-         // line-height: 142.6%;
-         // margin: 51px 0;
          font-weight: 500;
          font-size: 36px;
+         margin: 38px 0;
 
-         @media screen and (max-width: 780px) {
+         @media screen and (max-width: 900px) {
+            font-size: 24px;
+            margin: 32px 0;
+         }
+
+         @media screen and (max-width: 650px) {
             font-size: 18px;
             margin: 26px 0;
-
          }
       }
 
       &_return {
          display: block;
          text-align: center;
-         // line-height: 142.6%;
-         // margin: 26px 0;
          font-weight: 500;
          font-size: 18px;
          text-decoration: underline;
 
-         @media screen and (max-width: 780px) {
+         @media screen and (max-width: 900px) {
+            font-size: 16px;
+            margin: 28px 0;
+         }
+
+         @media screen and (max-width: 650px) {
             font-size: 14px;
             margin: 20px 0;
          }
